syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.packets;

message HandShakePacketS2C {
  int32 id = 1;
}